--- a/advertisement.css
+++ b/advertisement.css
@@ -19,7 +19,7 @@ img {vertical-align: middle;}
   margin: 0 2px;
   position: relative;
   top:40px;
-  background-color: grey;
+  background-color: #61A8F8;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -28,7 +28,7 @@ img {vertical-align: middle;}
 }
 
 .dotactive {
-  background-color: orange;
+  background-color: #FF9100;
 }
 
 /* Fading animation */
