--- a/signin.css
+++ b/signin.css
@@ -4,16 +4,19 @@ body {
     background: #E1EBEC;
     font-family: 'Poppins', sans-serif
 }
-
+.row img {
+    width: 100px;
+    height: 100px;
+    margin-left: 50px;
+}
 .row {
     width: 900px;
     border: none;
     border-radius: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
-
 .lcol {
-    background: linear-gradient(to bottom, rgb(16, 171, 185) 50%, rgb(79, 58, 212) 100%, rgba(125, 185, 232, 1) 100%);
+    background: linear-gradient(to bottom, rgb(5, 189, 149) 50%, rgb(11, 95, 163) 100%, rgba(125, 185, 232, 1) 100%);
     height: 550px;
     padding: 0 35px
 }
@@ -25,16 +28,17 @@ body {
 }
 
 span.txt {
-    color: #17C296
+    color: #c56c05;
 }
 
 .greeting {
     padding-top: 200px;
-    padding-right: 90px
+    padding-right: 90px;
+    text-align: center;
 }
 
 h6.mt-3 {
-    padding-right: 115px
+    padding-right: 70px;
 }
 
 .footer {
