--- a/css/test1.css
+++ b/css/test1.css
@@ -71,3 +71,61 @@ h3
 .group{
     zoom:   1;
 }
+
+.sidenav2 {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    opacity: 0.7;
+    overflow-x: hidden;
+    transition: 1.5s;
+    padding-top: 60px;
+    text-align:center;
+  }
+  
+  .sidenav2 a {
+    position: relative;
+    top:50px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  
+  }
+  
+  .sidenav2 a:hover{
+    color: #f1f1f1;
+  }
+  
+  .sidenav2 .closebtn2 {
+    position: absolute;
+    top:10%;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav2 {padding-top: 15px;}
+    .sidenav2 a {font-size: 18px;}
+  }
+  .formtype:hover
+  {
+    font-size: 26px;
+      color:#f1f1f1;
+      
+  }
+  .sidenav2 li a 
+  {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    
+    transition: 0.3s;
+  }
