--- a/setting.css
+++ b/setting.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url(./Image/bgrdcm.jpg);
+    background-image: url(https://img.wallpapersafari.com/desktop/1280/1024/11/20/tOuqxe.jpg);
     background-repeat:no-repeat;
     background-size: cover;
 }
