--- a/css/test1.css
+++ b/css/test1.css
@@ -2,6 +2,7 @@ body
 {
     margin:0;
     max-height: 100%;
+    max-width: 100%;
 }
 .dropdown-menu
 {
@@ -9,15 +10,14 @@ body
      background-image: url(https://i.pinimg.com/originals/f0/79/80/f07980d6b7cdb5655e2d19cf4e0b52df.jpg);
     background-size:cover;
     background-repeat: no-repeat;
+    opacity:0.7;
 }
-.dropdown-menu a:hover
-{
-    color:#08AFFC;
-}
+
 .dropdown-item
 {
     text-align: center;
     font-size: 28px;
+    color:#000000;
 }
 .dropdown-item:hover
 {
@@ -88,8 +88,6 @@ h3
   }
   
   .sidenav2 a {
-    position: relative;
-    top:50px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
@@ -101,18 +99,18 @@ h3
   .sidenav2 a:hover{
     color: #f1f1f1;
   }
-  
-  .sidenav2 .closebtn2 {
-    position: absolute;
-    top:10%;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
+
+  .sidenav2 .closebtn2{
+    font-size: 50px;
+   text-align: right;
   }
-  
   @media screen and (max-height: 450px) {
     .sidenav2 {padding-top: 15px;}
     .sidenav2 a {font-size: 18px;}
+  }
+  .formtype{
+      color:#000000;
+
   }
   .formtype:hover
   {
@@ -129,3 +127,246 @@ h3
     
     transition: 0.3s;
   }
+  .img-responsive:hover{
+    -ms-transform: scale(1.2); /* IE 9 */
+    -webkit-transform: scale(1.2); /* Safari 3-8 */
+    transform: scale(1.2);
+  }
+  button:hover{
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+  }
+  .wrapper{margin:10vh}
+  //post card styles
+  
+  .card{
+    border: none;
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+   overflow:hidden;
+   border-radius:20px;
+   min-height:450px;
+     box-shadow: 0 0 12px 0 rgba(0,0,0,0.2);
+  
+   @media (max-width: 768px) {
+    min-height:350px;
+  }
+  
+  @media (max-width: 420px) {
+    min-height:300px;
+  }
+  
+   &.card-has-bg{
+   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    background-size:120%;
+    background-repeat:no-repeat;
+    background-position: center center;
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: inherit;
+      -webkit-filter: grayscale(1);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);}
+  
+    &:hover {
+      transform: scale(0.98);
+       box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
+      background-size:130%;
+       transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  
+      .card-img-overlay {
+        transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+        background: rgb(35,79,109);
+       background: linear-gradient(0deg, rgba(4,69,114,0.5) 0%, rgba(4,69,114,1) 100%);
+       }
+    }
+  }
+   .card-footer{
+    background: none;
+     border-top: none;
+      .media{
+       img{
+         border:solid 3px rgba(234,95,0,0.3);
+       }
+     }
+   }
+   .card-meta{color:orange}
+   .card-body{ 
+     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+   &:hover {
+     .card-body{
+       margin-top:30px;
+       transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+     }
+   cursor: pointer;
+   transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+   .card-img-overlay {
+    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+   background: rgb(35,79,109);
+  background: linear-gradient(0deg, rgba(35,79,109,0.3785889355742297) 0%, rgba(69,95,113,1) 100%);
+  }
+  }
+  .dropdown-item:hover{
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+  }
+  .susano:hover{
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+  }
+  
+  .flip-card {
+    background-color: transparent;
+    width:100%;
+    height: 280px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .flip-card:focus {
+      outline: 0;
+  }
+  
+  .flip-card:hover .flip-card-inner,
+  .flip-card:focus .flip-card-inner{
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front,
+  .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background: linear-gradient(to left, #43F78E, #6fb1fc);
+    color: black;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .flip-card-back {
+    background: linear-gradient(to right, #4364f7, #6fb1fc);
+    color: white;
+    transform: rotateY(180deg);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+  
+  }
+  h3 {
+    font-size: 20px;
+    font-family: Verdana, sans-serif;
+    font-weight: bold;
+    color: #fff;
+  }
+  .main3
+  {
+      width:25%;
+      float: left;
+  }
+  .main1
+  {
+      width: 25%;
+      float: left;
+      position: relative;
+      left: 10px;
+  }
+  .main2
+  {
+      width: 25%;
+      float: left;
+  }
+  .main4
+  {
+      width: 25%;
+      float: left;
+  }
+  .group:before,
+  .group:after{
+      content: "";
+      display: table;
+  }
+  .group:after{
+      clear: both;
+  }
+  .group{
+      zoom:   1;
+  }
+  
+  .flip-card1 {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+  }
+  .flip-card1-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .flip-card1:focus {
+      outline: 0;
+  }
+  
+  .flip-card1:hover .flip-card1-inner,
+  .flip-card1:focus .flip-card1-inner{
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card1-front,
+  .flip-card1-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card1-front {
+    background: linear-gradient(to left, #43F78E, #6fb1fc);
+    color: black;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .flip-card1-back {
+    background: linear-gradient(to right, #4364f7, #6fb1fc);
+    color: white;
+    transform: rotateY(180deg);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
