--- a/css/menubar.css
+++ b/css/menubar.css
@@ -19,6 +19,7 @@
     transition: 0.5s;
     padding-top:60px;
     text-decoration:none; 
+    opacity: 0.8;
   }
   
 /*---------------------*/
@@ -29,7 +30,7 @@
     padding: 20px 20px 20px 20px;
     text-decoration: none;
     font-size: 26px;
-    color: black;
+    color: #000000;
     display: block;
     transition: 0.1s;
     position: relative;
@@ -40,6 +41,12 @@
   .sidenav a:hover 
   {
     color: #f1f1f1;
+
+  }
+  .attack:hover{
+    -ms-transform: scale(1.2); /* IE 9 */
+    -webkit-transform: scale(1.2); /* Safari 3-8 */
+    transform: scale(1.2);
   }
 /*---------------------*/
 
@@ -215,6 +222,7 @@ form.example::after
 .area-content a:hover 
 {
   color: #f1f1f1;
+  
 }
 
 .area:hover .area-content 
