--- a/css/test1.css
+++ b/css/test1.css
@@ -30,8 +30,9 @@ body
 h3
 {
     color:red;
-    font-size: 50px;
+    font-size: 27px;
     text-align: center;
+    text-shadow: 5px 2px 4px grey;
 }
 .w3-container
 {
@@ -278,12 +279,7 @@ h3
     justify-content: center;
   
   }
-  h3 {
-    font-size: 20px;
-    font-family: Verdana, sans-serif;
-    font-weight: bold;
-    color: #fff;
-  }
+  
   .main3
   {
       width:25%;
@@ -293,8 +289,7 @@ h3
   {
       width: 25%;
       float: left;
-      position: relative;
-      left: 10px;
+  
   }
   .main2
   {
@@ -320,8 +315,8 @@ h3
   
   .flip-card1 {
     background-color: transparent;
-    width: 300px;
-    height: 300px;
+    width: 190px;
+    height: 190px;
     perspective: 1000px;
   }
   .flip-card1-inner {
@@ -343,11 +338,17 @@ h3
     transform: rotateY(180deg);
   }
   
-  .flip-card1-front,
-  .flip-card1-back {
+  .flip-card1-front {
     position: absolute;
     width: 100%;
     height: 100%;
+    backface-visibility: hidden;
+  }
+
+  .flip-card1-back {
+    position: absolute;
+    width: 105%;
+    height: 105%;
     backface-visibility: hidden;
   }
   
@@ -361,7 +362,7 @@ h3
   }
   
   .flip-card1-back {
-    background: linear-gradient(to right, #4364f7, #6fb1fc);
+    background: linear-gradient(to left, #43F78E, #6fb1fc);
     color: white;
     transform: rotateY(180deg);
     z-index: 1;
